# federated-learning-autoencoder-anomaly-detection

./: .gitignore  README.md  client_preprocess.ipynb  config.py  eval.ipynb  eval_noise_removal.py  evaluation.ipynb  evaluation_graph.ipynb  fl_client.py  fl_server.py  main.py  metrics_exporters.py  preprocess.py  preprocessing.bat  preprocessing.ipynb  preprocessing.sh  pyproject.toml  requirements.txt  run.sh
codes/: constants.py  data_loader.py  model_utils.py  parser.py  plotter.py
codes/evaluations/: eval_utils.py  spot.py
codes/models/: AE.py  DAGMM.py  LSTM_AD.py  LSTM_AE.py  LSTM_Univariate.py  MAD_GAN.py  MSCRED.py  OmniAnomaly.py  USAD.py  __init__.py
data/: README.md
data/raw/ENERGY/: energy_consumption_hourly.csv  labels.xlsx
flower/: AE.py  README.md  client.py  eval_utils.py  server.py  spot.py  utils.py
results/: output.xlsx
