[tool.poetry]
name = "federated-learning-time-series-anomaly-detection"
version = "0.1.0"
description = "A distributed deep anomaly detection in time-series data."
authors = ["Kimleang <Kimleang>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
